<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sublimastore.carpetas.Activities.NuevoArticuloActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvTituloNuevo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGris"
                    android:padding="7dp"
                    android:text="@string/nuevoArticulo"
                    android:textColor="@color/colorBlanco"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/descripcion"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="121dp" />

                <EditText
                    android:id="@+id/txtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="15sp"
                    tools:ignore="InvalidId,LabelFor,SmallSp,TextFields" />

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/nombre"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="121dp" />

                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:textSize="15sp"
                    tools:ignore="InvalidId,LabelFor,SmallSp,TextFields" />

                <TextView
                    android:id="@+id/tvTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:text="@string/tipo"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="26dp"
                    tools:layout_editor_absoluteY="121dp" />

                <Spinner
                    android:id="@+id/spTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/tipo">

                </Spinner>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="7dp"
                        android:text="@string/precio"
                        android:textSize="15sp"
                        tools:layout_editor_absoluteX="26dp"
                        tools:layout_editor_absoluteY="121dp" />

                    <EditText
                        android:id="@+id/txtPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="7dp"
                        android:textSize="15sp"
                        tools:ignore="DuplicateIds,InvalidId,LabelFor,SmallSp,TextFields" />

                    <TextView
                        android:id="@+id/tvCantidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="7dp"
                        android:text="@string/cantidad"
                        android:textSize="15sp"
                        tools:layout_editor_absoluteX="26dp"
                        tools:layout_editor_absoluteY="121dp" />

                    <EditText
                        android:id="@+id/txtCantidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="7dp"
                        android:textSize="15sp"
                        tools:ignore="DuplicateIds,InvalidId,LabelFor,SmallSp,TextFields" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivImagen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <Button
                        android:id="@+id/btnImagen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="cargarImagen"
                        android:text="@string/cargarImagen"
                        android:textAlignment="center" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:onClick="crear"
                        android:text="@string/acpetar"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.485"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
